# COC

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.bat  config.cmake  doc.md
Classes/: AppDelegate.cpp  AppDelegate.h  HelloWorldScene.cpp  HelloWorldScene.h  main.cpp
Classes/Config/: ConfigManager.cpp  ConfigManager.h
Classes/Constant/: ConstantManager.cpp  ConstantManager.h
Classes/Container/Layer/: AttackLayer.cpp  AttackLayer.h  BuildingMenuLayer.cpp  BuildingMenuLayer.h  MainUILayer.cpp  MainUILayer.h  MapEditLayer.cpp  MapEditLayer.h  ReplayLayer.cpp  ReplayLayer.h  ShopLayer.cpp  ShopLayer.h
Classes/Container/Layer/Authentication/: LoginLayer.cpp  LoginLayer.h  RegisterLayer.cpp  RegisterLayer.h
Classes/Container/Layer/Clans/: ClansLayer.cpp  ClansLayer.h  JoinClansLayer.cpp  JoinClansLayer.h  MyClansLayer.cpp  MyClansLayer.h
Classes/Container/Layer/Clans/JoinClans/: JoinClansLayer.cpp  JoinClansLayer.h
Classes/Container/Layer/Clans/MyClans/: MyClansLayer.cpp  MyClansLayer.h
Classes/Container/Layer/Clans/MyClans/Chat/: ChatLayer.cpp  ChatLayer.h
Classes/Container/Layer/Clans/MyClans/ClansWar/: ClansWarLayer.cpp  ClansWarLayer.h
Classes/Container/Layer/Clans/MyClans/Member/: MemberLayer.cpp  MemberLayer.h
Classes/Container/Node/: ResourceWidget.cpp
Classes/Container/Scene/: GameScene.cpp  GameScene.h  SenceHelper.cpp  SenceHelper.h
Classes/Container/Scene/AttackScence/: AttackScene.cpp  AttackScene.h
Classes/Container/Scene/Authentication/: AuthScene.cpp  AuthScene.h
Classes/Container/Scene/Basic/: BasicScene.cpp  BasicScene.h
Classes/Container/Scene/Record/: RecordScene.cpp  RecordScene.h
Classes/Game/: BuildingManager.cpp  BuildingManager.h  GameScene.cpp  GameScene.h
Classes/Game/Building/: AllBuildings.h  Barracks.cpp  Barracks.h  BarracksBuilding.cpp  BarracksBuilding.h  Building.cpp  Building.h  BuildingFactory.cpp  BuildingFactory.h  DefenseBuilding.cpp  DefenseBuilding.h  PlaceholderBuilding.cpp  PlaceholderBuilding.h  ResourceBuilding.cpp  ResourceBuilding.h  StorageBuilding.cpp  StorageBuilding.h  TownHall.cpp  TownHall.h  TrapBuilding.cpp  TrapBuilding.h  Wall.cpp  Wall.h
Classes/Game/Soldier/: Archer.cpp  Archer.h  Barbarian.cpp  Barbarian.h  BasicSoldier.cpp  BasicSoldier.h  Bomber.cpp  Bomber.h  Dragon.cpp  Dragon.h  Gaint.cpp  Gaint.h
Classes/Game/Spell/: BasicSpell.cpp  BasicSpell.h  HealSpell.cpp  HealSpell.h  LightningSpell.cpp  LightningSpell.h  RageSpell.cpp  RageSpell.h
Classes/Manager/: PlayerManager.cpp  PlayerManager.h
Classes/Manager/Building/: BuildingManager.cpp  BuildingManager.h
Classes/Manager/Config/: ConfigManager.cpp  ConfigManager.h
Classes/Manager/Record/: RecordManager.cpp  RecordManager.h
Classes/Manager/Troop/: TroopManager.cpp  TroopManager.h
Classes/UI/: MainUILayer.cpp  MainUILayer.h  ResourceWidget.cpp  ResourceWidget.h  ShopLayer.cpp
Classes/Utils/: AudioManager.cpp  AudioManager.h  GridUtils.cpp  GridUtils.h  PathFinder.cpp  PathFinder.h  PathUtils.cpp  PathUtils.h
Classes/Utils/API/: BaseURL.h  URLEncoder.cpp  URLEncoder.h  example.cpp  example.h
Classes/Utils/API/Authentication/: Login.cpp  Login.h  Register.cpp  Register.h
Classes/Utils/API/Battle/: Battle.cpp  Battle.h
Classes/Utils/API/Clans/: Clans.cpp  Clans.h  ClansWar.cpp  ClansWar.h
Classes/Utils/API/User/: User.cpp  User.h
Classes/Utils/Profile/: Profile.cpp  Profile.h
Classes/test/: BattleTest.cpp  ClansTest.cpp  ClansWarTest.cpp  ExampleTest.cpp  GridUtilsTest.cpp  LoginTest.cpp  PathFinderTest.cpp  PathUtilsTest.cpp  ProfileTest.cpp  RegisterTest.cpp  URLEncoderTest.cpp  UserTest.cpp
Classes/util/: GridUtils.cpp  GridUtils.h
Docs/: AttackAndPathfinding.md  Pathfinding_Design.md  SaveSystem_Reference.md
Resources/: .gitkeep
Resources/config/: background.json  building.json  building_map.json  constant.json  soilder.json  spell.json  troop.json
Resources/develop/: map.json  record.json  user_data.json
Resources/level/: 1.json  2.json  _tmp.json  summary.json
Resources/profile/: me.json
Resources/record/: Clans-War-1_20251222_165958.json  Clans-War-1_20251222_170006.json  Clans-War-1_20251222_170906.json  Clans-War-2_20251222_163603.json  Clans-War-2_20251222_163732.json  Clans-War-2_20251222_165429.json  Clans-War-2_20251222_170111.json  Clans-War-3_20251222_165052.json  Clans-War-4_20251222_163109.json  Clans-War-4_20251222_163429.json  Clans-War-4_20251222_164801.json  Clans-War-5_20251222_155307.json  Clans-War-5_20251222_155428.json  Clans-War-5_20251222_161532.json  Clans-War-5_20251222_162035.json  Clans-War-5_20251222_163524.json  Clans-War-5_20251222_163927.json  Level-1_20251213_201723.json  Level-1_20251217_161046.json  Level-1_20251217_163111.json  Level-1_20251218_084807.json  Level-1_20251219_181014.json  Level-1_20251219_181227.json  Level-1_20251219_184933.json  Level-1_20251219_185027.json  Level-1_20251219_185830.json  Level-1_20251219_191016.json  Level-1_20251219_193557.json  Level-1_20251219_193713.json  Level-1_20251219_194049.json  Level-1_20251219_194102.json  Level-1_20251219_194114.json  Level-1_20251219_194125.json  Level-1_20251219_194150.json  Level-1_20251219_194200.json  Level-1_20251219_194558.json  Level-1_20251219_194608.json  Level-1_20251219_194735.json  Level-1_20251219_200707.json  Level-1_20251219_201103.json  (+42 more)
proj.android/: gradle.properties  settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle  proj.android.lnk
proj.android/app/release/: output-metadata.json
server/: run.py
server/app/api/: auth.py  clans.py  clanswar.py  map.py  oppenet.py  user.py
server/app/utils/: Clans.py  ClansWar.py  Map.py  Oppenet.py  User.py
server/static/clans/: chat.json  clans.json
server/static/clans/war/: summary.json
server/static/clans/war/template/3/: 2.json
server/static/map/: 3.json
server/static/user/: users.json
